--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/keycloak.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/keycloak.yaml
@@ -6,8 +6,8 @@ metadata:
     app: neon-sso
 spec:
   instances: 1
-  extensions:
-    - https://github.com/aerogear/keycloak-metrics-spi/releases/download/1.0.4/keycloak-metrics-spi-1.0.4.jar
+  #extensions:
+  #  - https://github.com/aerogear/keycloak-metrics-spi/releases/download/1.0.4/keycloak-metrics-spi-1.0.4.jar
   externalAccess:
     enabled: False
   podDisruptionBudget:
