--- a/Images/test-cadence/Dockerfile
+++ b/Images/test-cadence/Dockerfile
@@ -23,7 +23,7 @@
 ARG         ORGANIZATION
 ARG         BASE_ORGANIZATION
 ARG         CLUSTER_VERSION
-FROM        mcr.microsoft.com/dotnet/aspnet:3.1
+FROM        mcr.microsoft.com/dotnet/aspnet:5.0.12-focal-amd64
 MAINTAINER  marcus@neonforge.com
 STOPSIGNAL  SIGTERM
 ARG         APPNAME
