[build]: Suppress CS8892 warnings in snippet projects

--- a/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
+++ b/Snippets/Cadence/Snippets.Cadence.HelloWorld/Snippets.Cadence.HelloWorld.csproj
@@ -18,6 +18,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <NoWarn>1701;1702; CS8892</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
