--- a/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
+++ b/Snippets/Temporal/Snippets.Temporal.HelloWorld/Snippets.Temporal.HelloWorld.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -18,6 +18,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <NoWarn>1701;1702; CS8892</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
