--- a/Lib/Neon.WinTTY/Neon.WinTTY.csproj
+++ b/Lib/Neon.WinTTY/Neon.WinTTY.csproj
@@ -1,30 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net48; netcoreapp3.1; net5.0</TargetFrameworks>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <OutputType>Library</OutputType>
-    <RootNamespace>Neon.Xunit.Cadence</RootNamespace>
-    <Version>2.18.2</Version>
+    <RootNamespace>Neon.WinTTY</RootNamespace>
     <Authors>neonFORGE Team</Authors>
+    <Version>2.18.2</Version>
     <Company>neonFORGE LLC</Company>
-    <Description>Xunit test fixture for Uber Cadence</Description>
+    <Product>neonLIBRARY</Product>
+    <Description>Windows WinTTY support for .NET</Description>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <FileVersion>0.0.0.0</FileVersion>
-    <Product>neonLIBRARY</Product>
     <LangVersion>latest</LangVersion>
     <IsPackable>true</IsPackable>
     <PackageLicenseUrl></PackageLicenseUrl>
-    <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.Xunit.Cadence/README.md</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/nforgeio/neonKUBE/blob/master/Lib/Neon.WinTTY/README.md</PackageProjectUrl>
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/nforgeio/neonKUBE</RepositoryUrl>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
-    <AssemblyName>Neon.Xunit.Cadence</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
-    <PackageTags>xunit uber cadence workflow agent</PackageTags>
+    <PackageTags>WinTTY TTY</PackageTags>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <GenerateTargetFrameworkAttribute>true</GenerateTargetFrameworkAttribute>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -48,13 +47,6 @@
     <WarningsAsErrors>NU1605</WarningsAsErrors>
     <NoWarn></NoWarn>
   </PropertyGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Neon.Cadence\Neon.Cadence.csproj" />
-    <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
-    <ProjectReference Include="..\Neon.XenServer\Neon.XenServer.csproj" />
-    <ProjectReference Include="..\Neon.Xunit\Neon.Xunit.csproj" />
-  </ItemGroup>
 
   <ItemGroup>
     <None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
