docker login works now

--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/harborcluster.yaml
@@ -138,6 +138,8 @@ spec:
     {{- end }}
     {{- end }}
     relativeURLs: true
+    certificateRefs:
+      - registry-token-cert
     resources: {}
     metrics:
       enabled: true
