--- a/Lib/Neon.Kube/Resources/Helm/keycloak/templates/harbor-client.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/keycloak/templates/harbor-client.yaml
@@ -37,3 +37,38 @@ spec:
           id.token.claim: "true"
           access.token.claim: "true"
           claim.name: "groups"
+      - name: email
+        protocol: openid-connect
+        protocolMapper: oidc-usermodel-attribute-mapper
+        config:
+          user.attribute: "email"
+          id.token.claim: "true"
+          access.token.claim: "true"
+          claim.name: "email"
+          userinfo.token.claim: "true"
+      - name: roles
+        protocol: openid-connect
+        protocolMapper: oidc-usermodel-client-role-mapper
+        config:
+          id.token.claim: "true"
+          access.token.claim: "true"
+          claim.name: "roles"
+          multivalued: "true"
+          userinfo.token.claim: "true"
+---
+apiVersion: keycloak.org/v1alpha1
+kind: KeycloakClient
+metadata:
+  name: docker
+  namespace: neon-system
+  labels:
+    app: neon-sso
+spec:
+  realmSelector:
+     matchLabels:
+      app: neon-sso
+  client:
+    name: docker
+    clientId: docker
+    enabled: true
+    protocol: docker-v2
