--- a/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/minio/values.yaml
@@ -162,7 +162,7 @@ tenants:
       - name: MINIO_PROMETHEUS_AUTH_TYPE
         value: public
       - name: MINIO_IDENTITY_OPENID_SCOPES
-        value: "openid"
+        value: "openid email profile groups"
       - name: MINIO_IDENTITY_OPENID_CLAIM_NAME
         value: roles
     ## PriorityClassName indicates the Pod priority and hence importance of a Pod relative to other Pods.
