--- a/Lib/Neon.Kube/Resources/Helm/oauth2-proxy/templates/deployment.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/oauth2-proxy/templates/deployment.yaml
@@ -65,22 +65,19 @@ spec:
         {{- if .Values.htpasswdFile.enabled }}
           - --htpasswd-file=/etc/oauth2_proxy/htpasswd/users.txt
         {{- end }}
-          - --login-url=https://sso.{{ .Values.cluster.domain }}/auth/realms/neon-sso/protocol/openid-connect/auth
-          - --redeem-url=https://sso.{{ .Values.cluster.domain }}/auth/realms/neon-sso/protocol/openid-connect/token
-          - --validate-url=https://sso.{{ .Values.cluster.domain }}/auth/realms/neon-sso/protocol/openid-connect/userinfo
-          - --profile-url=https://sso.{{ .Values.cluster.domain }}/auth/realms/neon-sso/protocol/openid-connect/userinfo
-          - --oidc-issuer-url=https://sso.{{ .Values.cluster.domain }}/auth/realms/neon-sso
+          - --login-url=https://dex.{{ .Values.cluster.domain }}
+          - --oidc-issuer-url=https://dex.{{ .Values.cluster.domain }}
         env:
         {{- if .Values.proxyVarsAsSecrets }}
         - name: OAUTH2_PROXY_CLIENT_ID
           valueFrom:
             secretKeyRef:
-              name:  keycloak-client-secret-oauth2-proxy
+              name:  dex-client-secret-oauth2-proxy
               key: CLIENT_ID
         - name: OAUTH2_PROXY_CLIENT_SECRET
           valueFrom:
             secretKeyRef:
-              name:  keycloak-client-secret-oauth2-proxy
+              name:  dex-client-secret-oauth2-proxy
               key: CLIENT_SECRET
         - name: OAUTH2_PROXY_COOKIE_SECRET
           valueFrom:
